--- a/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail.csproj
+++ b/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail.csproj
@@ -213,12 +213,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\CLIENTE.cs" />
+    <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ITEM_VENDA.cs" />
+    <Compile Include="Models\ItemVenda.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\PRODUTO.cs" />
-    <Compile Include="Models\VENDA.cs" />
+    <Compile Include="Models\Produto.cs" />
+    <Compile Include="Models\Venda.cs" />
     <Compile Include="Models\VendasModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
